--- a/scss/components/_fonts.scss
+++ b/scss/components/_fonts.scss
@@ -1,5 +1,10 @@
-p, h1, h2, h3, h4, h5, h6, li, a {
-    font-family: sans-serif;
+h1 {
+    font-family: 'Staatliches', cursive;
+    text-decoration: none;
+}
+
+p, h2, h3, h4, h5, h6, li, a {
+    font-family: 'Roboto Flex', sans-serif;
     text-decoration: none;
 }
 
