--- a/css/main.css
+++ b/css/main.css
@@ -52,8 +52,12 @@
 header, main, footer {
   width: 100%; }
 
-p, h1, h2, h3, h4, h5, h6, li, a {
-  font-family: sans-serif;
+h1 {
+  font-family: 'Staatliches', cursive;
+  text-decoration: none; }
+
+p, h2, h3, h4, h5, h6, li, a {
+  font-family: 'Roboto Flex', sans-serif;
   text-decoration: none; }
 
 p {
@@ -284,17 +288,20 @@ h6 {
 
 .active p {
   font-weight: bolder;
-  font-size: 17px; }
+  font-size: 16px; }
 
 .active p:hover {
   color: white;
-  font-size: 17px; }
+  font-size: 16px; }
 
 .navbar .navbar-toggler[aria-expanded="true"] {
   color: white; }
 
 .navbar .navbar-toggler:focus {
   color: white; }
+
+.navbar__favicon {
+  text-align: center; }
 
 .pagefooter {
   height: 50vh;
