--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ h6 {
   text-align: left; }
 
 #hometitle1:hover, #hometitle2:hover {
-  font-size: 33px;
+  font-size: 31px;
   text-decoration: underline;
   font-weight: bolder; }
 
@@ -146,8 +146,8 @@ h6 {
   text-align: left; }
 
 #homecaption1:hover, #homecaption2:hover {
-  font-size: 20px;
-  text-decoration: underline;
+  font-size: 19px;
+  text-decoration: none;
   font-weight: bolder; }
 
 .hometext h5, .hometext p {
@@ -284,7 +284,7 @@ h6 {
 
 .nav-link p:hover {
   color: black;
-  font-size: 110%; }
+  font-size: 104%; }
 
 .active p {
   font-weight: bolder;
@@ -317,7 +317,7 @@ h6 {
 
 .fa-brands:hover {
   color: black;
-  font-size: 38px; }
+  font-size: 29px; }
 
 .fixed-bottom {
   background-color: white;
